Changed Company About page to prevent overflow. Center aligned Company BlogPost Page titles

--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -363,5 +363,6 @@
     font-family: 'Helvetica', sans-serif;
     font-weight: 300;
     padding-left: 5vw;
+    padding-right: 15vw;
   }
 }
